--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-    "name": "eventjp-scraper",
-    "version": "1.0.0",
-    "description": "EventJP Scraper with Electron and Python backend",
-    "main": "main.js",
-    "scripts": {
-      "start": "electron ."
-    },
-    "devDependencies": {
-      "electron": "^13.1.7"
-    },
-    "dependencies": {
-      "axios": "^0.21.1"
-    }
+  "name": "eventscraperjp",
+  "version": "1.0.0",
+  "description": "Scraper for https://t.pia.jp/ and https://l-tike.com/ and https://eplus.jp/",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Masterfor07/EventScraperJP.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Masterfor07/EventScraperJP/issues"
+  },
+  "homepage": "https://github.com/Masterfor07/EventScraperJP#readme",
+  "devDependencies": {
+    "electron": "^34.0.2"
   }
+}
