--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
-  "name": "eventscraperjp",
+  "name": "eventjp-scraper",
   "version": "1.0.0",
-  "description": "Scraper for https://t.pia.jp/ and https://l-tike.com/ and https://eplus.jp/",
+  "description": "EventJP Scraper with Electron and Python backend",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Masterfor07/EventScraperJP.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Masterfor07/EventScraperJP/issues"
-  },
-  "homepage": "https://github.com/Masterfor07/EventScraperJP#readme",
   "devDependencies": {
-    "electron": "^34.0.2"
+    "electron": "^13.1.7"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
