--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "eventjp-scraper",
   "version": "1.0.0",
-  "description": "EventJP Scraper with Electron and Python backend",
+  "description": "EventJP Scraper application that uses Electron for the frontend and a Python backend to scrape event data from various sources.",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "dev": "electron . --dev",
+    "build": "electron-builder",
+    "electron": "^25.3.1"
   },
   "devDependencies": {
     "electron": "^13.1.7"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^1.4.0"
   }
 }
