Reverted the Python exe because of missing libraries

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "appId": "com.Mast.EventJPScraper",
     "productName": "EventJP Scraper",
     "directories": {
-      "output": "dist"
+      "output": "release-builds"
     },
     "files": [
       "main.js",
