--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eventjpscraper",
   "version": "1.0.0",
-  "description": "EventJP Scraper application that uses Electron for the frontend and a Python backend to scrape event data from various sources.",
+  "description": "EventJP Scraper",
   "author": "Mast",
   "main": "main.js",
   "scripts": {
@@ -16,7 +16,9 @@
     "electron-builder": "^24.6.0"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "tree-kill": "^1.2.2",
+    "ps-node": "^0.1.0"
   },
   "build": {
     "appId": "com.Mast.EventJPScraper",
