--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "tree-kill": "^1.2.2",
-    "ps-node": "^0.1.0"
+    "tree-kill":"1.2.2"
   },
   "build": {
     "appId": "com.Mast.EventJPScraper",
