--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "tree-kill":"1.2.2"
+    "node-fetch": "^2.6.1"
   },
   "build": {
     "appId": "com.Mast.EventJPScraper",
