--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "electron-builder": "^24.6.0"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "node-fetch": "^2.6.1"
+    "axios": "^1.4.0"
   },
   "build": {
     "appId": "com.Mast.EventJPScraper",
